<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onboard_layout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/slide_logo"
        android:src="@drawable/spontivly_logo"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"/>


    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/country_text"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/slide_logo"/>

    <EditText
        android:id="@+id/edittext_phone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@id/autoCompleteTextView"
        android:ems="10"
        android:hint="@string/onboarding_phone"
        android:layout_centerHorizontal="true"
        android:inputType="phone" />

    <TextView
        android:id="@+id/slide_description"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/onboarding_SMS"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp" />

    <Button
        android:id="@+id/location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_background"
        android:text="@string/next_label"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

</RelativeLayout>