<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onboard_layout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/slide_logo"
        android:src="@drawable/spontivly_logo"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"/>


    <ImageView
        android:id="@+id/user_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slide_logo"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/onboarding_user" />

    <EditText
        android:id="@+id/username_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@id/user_logo"
        android:ems="10"
        android:hint="@string/onboarding_name"
        android:layout_centerHorizontal="true"
        android:inputType="phone" />

    <EditText
        android:id="@+id/birthday_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@id/username_text"
        android:ems="10"
        android:hint="@string/onboarding_birthday"
        android:layout_centerHorizontal="true"
        android:inputType="date" />

    <AutoCompleteTextView
        android:id="@+id/gender_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/birthday_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:hint="@string/onboarding_gender"
        android:inputType="textAutoComplete" />

    <Button
        android:id="@+id/finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_background"
        android:text="@string/onboarding_finish"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

</RelativeLayout>